src/objects/MG_Timeline_Event__c.object
<CustomObject>
    <fields>
        <fullName>Action_Name__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timeline_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Timeline Event</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>MG_TimeLineEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>